--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -1,4 +1,6 @@
 <%= simple_form_for @book do |b| %>
+	
+	<%= select_tag(:category_id, options_for_select(@categories),:prompt => "Select a Category") %>
 	<%=b.input :title %>
 	<%=b.input :description %>
 	<%=b.input :author %>
