BookStoreApp : Complete Book Review App

--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -1,9 +1,10 @@
-<%= simple_form_for @book do |b| %>
+<%= simple_form_for @book, :html => { :multipart => true} do |b| %>
 	
-	<%= select_tag(:category_id, options_for_select(@categories),:prompt => "Select a Category") %>
+	<%= select_tag(:category_id, options_for_select(@categories), :prompt => "Select a Category") %>
 	<%=b.input :title %>
 	<%=b.input :description %>
 	<%=b.input :author %>
-	<%=b.button :submit %>
-
+	<%=b.file_field :image %><br>
+	<%=b.button :submit, :class => 'btn-custom2' %>
+	
 <% end %>
