--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,3 +1,17 @@
-<h1>Edit Book</h1>
+<div class="col-md-6 col-md-offset-3">
 
-<%= render 'form' %>
+  <div class="edit-book-form">
+
+    <h1>Edit Book</h1>
+    <%= simple_form_for @book, :html => { :multipart => true} do |b| %>
+    	
+    	<%=b.select :category_id , @categories %>
+    	<%=b.input :title %>
+    	<%=b.input :description %>
+  	  <%=b.input :author %>
+  	  <%=b.button :submit, :class => 'btn-custom2' %>
+
+    <% end %>
+  </div>
+
+</div>
