--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,4 +1,20 @@
-<% @books.each do |book| %>
-	<h1><%= link_to book.title, book_path(book) %></h1>
+
+<h1 class="current-category"><%= params[:category]%></h1>
+
+<% if @books.count == 0 %>
+	<h1>There are currently no books in this category !</h1>
+<% else %>
+	<div class="row">	
+
+		<% @books.each do |book| %>
+			<div class="col-md-3">
+				<a href="/books/<%= book.id %>">
+					<%= image_tag book.image_url(:book_index), :class => "book-index" %>
+				</a>
+			</div>
+		<% end %>
+
+	</div>	
 <% end %>
 
+	
