--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,12 +1,58 @@
-<h2><%= @book.title%></h2>
-<h3><%= @book.author%></h3>
-<p><%=  @book.description%></p>
+<div class ="row">
+	<div class= "col-md-4">
+		<%= image_tag @book.image_url(:book_show), :class => 'book-show' %>
+	</div>
+	<div class="col-md-8">
+		
+		<div class="book-info">
 
-<% if user_signed_in? %>
+			<h2 class="book-title"><%= @book.title%></h2>
+			<h3 class="book-author"><%= @book.author%></h3>
+			<h2 class="average_rating">Average Rating</h2>
+			<div class="average-review-rating" data-score= <%= @average_rating %> ></div>
+			<span class="number-of-reviews">Based on <%=@book.reviews.count %> reviews</span>
+			<p class="book-desc"><%=  @book.description%></p>
+	</div>
+	</div>
+</div>
+		
 
-	<% if @book.user == current_user %>
-		<%=link_to "Edit Book", edit_book_path(@book) %>
-		<%=link_to "Delete Book", book_path(@book), method: :delete, data: {confirm: "Are you sure?" }%>
-	<% end %>
+<div class="row">
 	
-<% end %>
+	<div class="col-md-4">
+
+		<div class="reviews">
+
+		<!--Reviews will go here  -->
+		<h1>Reviews</h1>
+		<%= render @book.reviews %>
+		<div>
+			<%=link_to "Add Review", new_book_review_path(@book), :class => 'btn btn-custom' %>
+		</div>
+
+	</div>
+
+	</div>
+	
+</div>
+
+
+<script>
+	$('.review-rating').raty({
+		readOnly: true,
+		score: function() {
+			return $(this).attr('data-score');
+		},
+		path: '/assets/'
+	});
+</script>
+
+<script>
+	$('.average-review-rating').raty({
+		readOnly: true,
+		path: '/assets',
+		score: function() {
+			return $(this).attr('data-score')
+		}
+	});
+</script>
