--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,11 +18,13 @@
       <div class="container">
 
         <div class="navbar-header">
-          <%= link_to "Book Review", root_path, class: "navbar-brand" %>
+          <%= link_to "Book Review", root_path, :class => 'navbar-brand' %>
         </div>
 
         <ul class="nav navbar-nav">
+          <% if !user_signed_in? %>
           <li><%=link_to "Signup",  new_user_registration_path %></li>
+          <% end %>
           <% if user_signed_in? %>
           <li><%=link_to "Signout", destroy_user_session_path , method: :delete %></li>
           <% else %>
@@ -31,6 +33,18 @@
         </ul>
 
         <ul class="nav navbar-nav navbar-right">
+
+         <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">Categories<span class="caret"></span></a>
+          <ul class="dropdown-menu" role="menu">
+            <% Category.all.each do |category| %>
+              <li class="<%= 'active' if params[:category] == category.name %>">
+                <%= link_to category.name, books_path(category: category.name), class:"link" %>
+              </li>  
+            <% end %>  
+          </ul> 
+         </li>
+        
           <% if user_signed_in? %>
           <li><%= link_to "Add Books", new_book_path%></li>
           <% end %>
@@ -46,7 +60,8 @@
     <% if alert %>
        <p class="alert alert-danger"><%= alert %></p>
     <% end %>
-
-    <%= yield %>
+    <div class ="container">
+      <%= yield %>
+    </div>
   </body>
 </html>
