BookReviewApp : Complete App with Authorization using Pundit

--- a/app/views/reviews/_review.html.erb
+++ b/app/views/reviews/_review.html.erb
@@ -6,9 +6,9 @@
 
   <% if user_signed_in? %>
 
-  	<% if review.user_id == current_user.id %>
+  	<% if review.user == current_user %>
 
-      <div class="links btn-group">
+      <div class="btn-group">
 
     		<%= link_to "Edit Review", edit_book_review_path(review.book,review), :class => 'btn btn-custom' %>
     		<%= link_to "Delete Review", book_review_path(review.book,review) , method: :delete, data: {confirm: "Are you sure?"}, :class => 'btn btn-custom' %>
