--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -12,6 +12,16 @@
 			<div class="average-review-rating" data-score= <%= @average_rating %> ></div>
 			<span class="number-of-reviews">Based on <%=@book.reviews.count %> reviews</span>
 			<p class="book-desc"><%=  @book.description%></p>
+
+			<% if user_signed_in? %>
+				<% if @book.user == current_user %>
+					<div class = "btn-group">
+						<%= link_to "Edit Book", edit_book_path(@book) , :class => "btn btn-custom" %>
+						<%= link_to "Delete Book", book_path(@book), method: :delete , data: {confirm: "Are you sure?"} , :class => "btn btn-custom" %>
+					</div>	
+				<% end %>
+			<% end %>
+
 	</div>
 	</div>
 </div>
